# tikzfigure

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  README.qmd  index.html  mkdocs.yml  panache.toml  pyproject.toml  pytest.ini  style.css
.github/actions/build-docs/: action.yml
.github/workflows/: ci.yml  docs.yml  jekyll-gh-pages.yml  publish.yml  publish_docs.yml  publish_pypi.yml  render_quarto.yml  static_analysis.yml  test.yml  test_docs.yml  test_pytest.yml  test_tutorials.yml  testing.yml
astro_docs/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json
astro_docs/.omc/state/: idle-notif-cooldown.json
astro_docs/public/: pyodide-demo.html  tikz-editor.css  tikz-editor.html  tikz-editor.js
astro_docs/scripts/: build_tutorials.py  generate_api_docs.py  generate_logo.py  generate_quickstart.py
astro_docs/src/components/: Header.astro
astro_docs/src/content/: pyodide-demo.md
astro_docs/src/styles/: custom.css
docker/: Dockerfile
docs/: api.md  conf.py  hooks.py  index.md  index.rst  installation.md
docs/scripts/: build_tutorials.py
docs/source/: api.md  conf.py  getting_started.rst  index.md  index.rst  quickstart.md  tutorials.md  tutorials.rst
docs/source/_static/: custom.css
docs/source/api/: index.rst
docs/source/guides/: install.rst  quickstart.rst
docs/source/tutorials/: tutorial_01.ipynb
docs/superpowers/specs/: 2026-04-13-tikz-editor-redesign-design.md  2026-04-15-tutorial-node-path-chaining-example-design.md
examples/: 01_draw_spiral.py  axis2d_example.py  tutorial_10_calendar.qmd
scripts/: generate_colors.py
src/maxtikzlib/: __init__.py  base.py  coordinate.py  figure.py  layer.py  logo.py  loop.py  node.py  path.py  plot.py  position.py  variable.py
src/maxtikzlib/console/: main.py
src/tikzfigure/: __init__.py  arrows.py  colors.py  decorations.py  marks.py  math.py  options.py  patterns.py  shapes.py  styles.py  units.py
src/tikzfigure/core/: arc.py  axis.py  base.py  circle.py  color.py  coordinate.py  declared_function.py  ellipse.py  figure.py  figure_export.py  figure_layout.py  figure_parsing.py  figure_paths.py  figure_render.py  grid.py  ipython.py  layer.py  line.py  linestyle.py  loop.py  node.py  parabola.py  path.py  path_builder.py  plot.py  polygon.py  raw.py  rectangle.py  scope.py  serialization.py  spy.py  types.py  (+3 more)
src/tikzpics/: __init__.py  base.py  coordinate.py  figure.py  ipython.py  layer.py  loop.py  path.py  plot.py  raw.py  variable.py
tests/unit/: test_app.py  test_ipython.py
tutorials/: 00_tutorial_logo.py  01_curves.py  02_loop.py  example_tutorial.ipynb  tutorial_01.ipynb  tutorial_01_basic.ipynb  tutorial_01_getting_started.ipynb  tutorial_01_getting_started.qmd  tutorial_02.ipynb  tutorial_02_advanced.ipynb  tutorial_02_layers.ipynb  tutorial_02_styling.ipynb  tutorial_02_styling.qmd  tutorial_03.ipynb  tutorial_03_loops.ipynb  tutorial_03_paths.qmd  tutorial_03_paths_and_shapes.ipynb  tutorial_03_paths_and_shapes.qmd  tutorial_04.ipynb  tutorial_04_layers.html  tutorial_04_layers.ipynb  tutorial_04_layers.qmd  tutorial_04_primitives.qmd  tutorial_04_space_filling_curves.ipynb  tutorial_05.ipynb  tutorial_05_3D_figures.ipynb  tutorial_05_layers.qmd  tutorial_05_loops.ipynb  tutorial_05_loops.qmd  tutorial_06_coordinates_and_midpoints.html  tutorial_06_coordinates_and_midpoints.ipynb  tutorial_06_coordinates_and_midpoints.qmd  tutorial_06_loops.qmd  tutorial_06_raw_tikz.ipynb  tutorial_07_3d_figures.ipynb  tutorial_07_3d_figures.md  tutorial_07_3d_figures.qmd  tutorial_07_coordinates_and_midpoints.qmd  tutorial_07_ipython_magic.ipynb  tutorial_08_3d_figures.qmd  (+32 more)
tutorials/advanced/: tutorial_10_math_expressions.qmd  tutorial_17_figure_configuration.qmd  tutorial_18_shading_and_patterns.qmd  tutorial_19_opacity_and_transparency.qmd  tutorial_20_decorations.qmd  tutorial_21_advanced_styling.qmd  tutorial_24_spy_library.qmd  tutorial_25_parametric_tikz_plots.qmd
tutorials/drawing/: tutorial_04_primitives.qmd  tutorial_05_layers.qmd  tutorial_06_loops.qmd  tutorial_07_coordinates_and_midpoints.qmd
tutorials/fundamentals/: tutorial_01_getting_started.qmd
tutorials/includes/: tikz_code_callout.qmd
tutorials/plots/: tutorial_13_2d_plots_functions.qmd  tutorial_14_subfigures.qmd  tutorial_15_mixed_subfigures.qmd
tutorials/showcases/: tutorial_22_calendar.qmd  tutorial_23_karl_students.qmd
(+49 files in other folders)
