[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools", "wheel" ]

[project]
name = "tikzpics"
version = "0.1.2"
description = "Python interface to generate (readable) Tikz figures."
readme = "README.md"
keywords = [ "python" ]
license = { file = "LICENSE.txt" }
authors = [ { name = "Max" } ]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "pymupdf",
]

optional-dependencies.dev = [
  "black[jupyter]",
  "isort",
  "pre-commit",
  "pyproject-fmt",
  "ruff",
  "tikzpics[docs]",
  "tikzpics[test]",
]
optional-dependencies.docs = [
  "ipykernel",
  "jupyterlab",
  "myst-parser",
  "nbconvert",
  "nbsphinx",
  "numpy",
  "scipy",
  "sphinx",
  "sphinx-book-theme",
  "sphinx-design",
  "sphinxcontrib-mermaid",
]
optional-dependencies.test = [
  "coverage",
  "pytest",
]
urls."Source" = "https://github.com/max-models/tikzpics"

[tool.setuptools.packages.find]
where = [ "src" ]
