[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools", "wheel" ]

[project]
name = "tikzpics"
version = "0.1.3"
description = "Python interface to generate (readable) Tikz figures."
readme = "README.md"
keywords = [ "python" ]
license = { file = "LICENSE.txt" }
authors = [ { name = "Max" } ]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "pymupdf",
]

optional-dependencies.dev = [
  "pyyaml",
  "black[jupyter]",
  "isort",
  "pre-commit",
  "pyproject-fmt",
  "ruff",
  "tikzpics[docs]",
  "tikzpics[test]",
  "tikzpics[vis]",
]

optional-dependencies.vis = [
  "matplotlib",
  "jupyterlab",
]

optional-dependencies.docs = [
  "ipykernel",
  "mkdocs-material",
  "mkdocs-jupyter",
  "mkdocstrings[python]",
  "nbconvert",
  "numpy",
  "scipy",
  "tikzpics[vis]",
]
optional-dependencies.test = [
  "coverage",
  "pytest",
]
urls."Source" = "https://github.com/max-models/tikzpics"

[tool.setuptools.packages.find]
where = [ "src" ]
