[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools", "wheel" ]

[project]
name = "tikzfigure"
version = "0.3.0"
description = "Python interface to generate (readable) Tikz figures."
readme = "README.md"
keywords = [ "python" ]
license = { file = "LICENSE.txt" }
authors = [ { name = "Max" } ]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "typing_extensions>=4.0; python_version < '3.11'",
]

optional-dependencies.dev = [
  "pyyaml",
  "black[jupyter]",
  "isort",
  "pre-commit",
  "pyproject-fmt",
  "ruff",
  "tikzfigure[docs]",
  "tikzfigure[test]",
  "tikzfigure[vis]",
]

optional-dependencies.vis = [
  "matplotlib",
  "jupyterlab",
  "pymupdf",
  "requests",
]

optional-dependencies.docs = [
  "ipykernel",
  "mkdocs-material",
  "mkdocs-jupyter",
  "mkdocstrings[python]",
  "nbconvert",
  "numpy",
  "pydoc-markdown",
  "scipy",
  "tikzfigure[vis]",
]
optional-dependencies.test = [
  "coverage",
  "pytest",
  "types-requests",
  "mypy",
]
urls."Source" = "https://github.com/max-models/tikzfigure"

[tool.setuptools.packages.find]
where = [ "src" ]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["src/tikzfigure/tests"]

[tool.isort]
profile = "black"
